updated internal links

--- a/views/receivescore.html
+++ b/views/receivescore.html
@@ -8,7 +8,7 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link rel = "stylesheet" href = "/public/style.css">
+        <link rel = "stylesheet" href = "/TrickyTrivia/public/assets/css/style.css">
     
    
 
@@ -17,7 +17,7 @@
 
         <div class= "navbar">
             <div class = "logo logotwo">
-                <img src="/public\assets\logo.PNG" alt ="logo" height= "100">
+                <img src="/TrickyTrivia/public/assets/images/logo.PNG" alt ="logo" height= "100">
             </div>
         </div>
 
@@ -37,6 +37,6 @@
 
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/public/index.js"></script>
+    <script src="/TrickyTrivia/models/index.js"></script>
 
 </html>
