--- a/views/ViewHighscores.html
+++ b/views/ViewHighscores.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link rel = "stylesheet" href = "/public/style.css">
+      <link rel = "stylesheet" href = "/TrickyTrivia/public/assets/css/style.css">
   <title>High Scores</title>
 </head>
 
@@ -15,7 +15,7 @@
 
   <div class= "navbar">
     <div class = "logo logotwo">
-        <img src="/public\assets\logo.PNG" alt ="logo" height= "100">
+        <img src="/TrickyTrivia/public/assets/images/logo.PNG" alt ="logo" height= "100">
     </div>
 </div>
 
@@ -36,5 +36,5 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/public/index.js"></script>
+<script src="/TrickyTrivia/models/index.js"></script>
 </html>
