--- a/views/quiz-start.html
+++ b/views/quiz-start.html
@@ -8,13 +8,13 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href = "/public/style.css">
+    <link rel = "stylesheet" href = "/TrickyTrivia/public/assets/css/style.css">
 </head>
 
 <body>
     <div class= "navbar">
         <div class = "logo logotwo">
-            <img src="/public\assets\logo.PNG" alt ="logo" height= "100">
+            <img src="/TrickyTrivia/public/assets/images/logo.PNG" alt ="logo" height= "100">
         </div>
     </div>
 
@@ -44,9 +44,10 @@
 
 </div>           
 
-<div id = "displayimage"> <img src = "/public/assets/sample.jpg" alt = "sample" height= "300"> </div>
+<div id = "displayimage"> <img src = "/TrickyTrivia/public/assets/images/sample.jpg" alt = "sample" height= "300"> </div>
         
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/public/index.js"></script>
+<script src="/TrickyTrivia/models/index.js"></script>
+
 </html>
