--- a/views/topics.html
+++ b/views/topics.html
@@ -6,27 +6,27 @@
     <title>topics</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel = "stylesheet" href = "style.css">
-    <link rel = "stylesheet" href = "/public/style.css">
+    <link rel = "stylesheet" href = "/TrickyTrivia/public/assets/css/style.css">
 </head>
 <body>
     
     <div class= "navbar">
         <div class = "logo logotwo">
-            <img src="/public\assets\logo.PNG" alt ="logo" height= "100">
+            <img src="/TrickyTrivia/public/assets/images/logo.PNG" alt ="logo" height= "100">
         </div>
     </div>
     <h3>Select a topic to play!</h3>
 
     <div class="container topics">
         <div class="row">
-          <div class="col">  <img src="/public/assets/sports.jpg" alt="sports" class="img-thumbnail" ><div class = "topic"> <h2>Sports</h2></div></div>
-          <div class="col">  <img src="/public/assets/entertainment.jpg" alt="entertainment" class="img-thumbnail" ><div class = "topic"> <h2>TV Shows</h2></div></div>
+          <div class="col">  <img src="/TrickyTrivia/public/assets/images/sports.jpg" alt="sports" class="img-thumbnail" ><div class = "topic"> <h2>Sports</h2></div></div>
+          <div class="col">  <img src="/TrickyTrivia/public/assets/images/entertainment.jpg" alt="entertainment" class="img-thumbnail" ><div class = "topic"> <h2>TV Shows</h2></div></div>
           <div class="w-100"></div>
-          <div class="col">  <img src="/public/assets/aroundtheworld.jpg" alt="aroundtheworld" class="img-thumbnail" ><div class = "topic"> <h2>Around the World</h2></div></div>
-          <div class="col">  <img src="/public/assets/politics.jpg" alt="politics" class="img-thumbnail" ><div class = "topic"> <h2>Politics</h2></div></div>
+          <div class="col">  <img src="/TrickyTrivia/public/assets/images/sample.jpg" alt="aroundtheworld" class="img-thumbnail" ><div class = "topic"> <h2>Around the World</h2></div></div>
+          <div class="col">  <img src="/TrickyTrivia/public/assets/images/politics.jpg" alt="politics" class="img-thumbnail" ><div class = "topic"> <h2>Politics</h2></div></div>
         </div>
       </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/public/index.js"></script>
+<script src="/TrickyTrivia/models/index.js"></script>
 </html>
