--- a/views/quizPolitics.html
+++ b/views/quizPolitics.html
@@ -8,7 +8,7 @@
     <title>Tricky Trivia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="startQuiz.css">
+    <link rel="stylesheet" href="../startQuiz.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
     <div class="container" style="margin: 30px auto;">
 
         <div class="jumbotron">
-            <h1 class="display-4 quizHeader" id="quizHeader">Sports </h1>
+            <h1 class="display-4 quizHeader" id="quizHeader">Politics</h1>
             <hr class="my-4">
             <p id="qText">
             </p>
@@ -79,8 +79,8 @@
 
     <!-- script links -->
     <div>
-        <script src="public/assets/js/sportsQuestions.js"></script>
-        <script src="script.js"></script>
+        <script src="../public/assets/js/politicsQuestions.js"></script>
+        <script src="../public/assets/js/script.js"></script>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
