--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,7 @@
   <title>Home</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" href="/../public/assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../public/assets/css/style.css">
 
 </head>
 
@@ -37,7 +37,7 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/TrickyTrivia/models/index.js"></script>
+<script src="/../models/index.js"></script>
 <script>
 
   // home page submit button
