fixed opening screen css and image

--- a/views/index.html
+++ b/views/index.html
@@ -7,7 +7,8 @@
   <title>Home</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="../public/assets/css/style.css">
+  <!-- <link rel="stylesheet" type="text/css" href="../public/assets/css/style.css"> -->
+  <link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
 
@@ -15,7 +16,7 @@
   <div class="homepage">
     <div class="navbar">
       <div class="logo">
-        <img src="../public/assets/images/logo.PNG" alt="logo" height="250">
+        <img src="../assets/images/logo.PNG" alt="logo" height="250">
       </div>
     </div>
 
