fixed css and images

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
 
-    <form method="post" action="topics.html" id="form">
+    <form method="GET" action="topics.html" id="form">
       <div class="col-lg-10 mb-3">
         <div class="input-group mycustom">
           <input type="text" class="form-control rounded-0" id="validationDefaultUsername" placeholder="Enter Your Name"
