--- a/views/topics.html
+++ b/views/topics.html
@@ -19,13 +19,14 @@
 
     <div class="container topics">
         <div class="row">
-          <div class="col">  <img src="../assets/images/sports.jpg" alt="sports" class="img-thumbnail" ><div class = "topic"> <h2>Sports</h2></div></div>
-          <div class="col">  <img src="../assets/images/entertainment.jpg" alt="entertainment" class="img-thumbnail" ><div class = "topic"> <h2>TV Shows</h2></div></div>
+          <div class="col">  <img src="../assets/images/sports.jpg" alt="sports" class="img-thumbnail" ><div class = "topic"> <h2><a href="quizsports.html">Sports</a></h2> </div></div>
+          <div class="col">  <img src="../assets/images/entertainment.jpg" alt="entertainment" class="img-thumbnail" ><div class = "topic"> <h2><a href="quizTV.html">TV Shows</a></h2></div></div>
           <div class="w-100"></div>
-          <div class="col">  <img src="../assets/images/sample.jpg" alt="aroundtheworld" class="img-thumbnail" ><div class = "topic"> <h2>Around the World</h2></div></div>
-          <div class="col">  <img src="../assets/images/politics.jpg" alt="politics" class="img-thumbnail" ><div class = "topic"> <h2>Politics</h2></div></div>
+          <div class="col">  <img src="../assets/images/sample.jpg" alt="aroundtheworld" class="img-thumbnail" ><div class = "topic"> <h2><div class = "topic"> <h2><a href="quizATW.html">Around The World</a></h2></div></h2></div></div>
+          <div class="col">  <img src="../assets/images/politics.jpg" alt="politics" class="img-thumbnail" ><div class = "topic"> <h2><div class = "topic"> <h2><a href="quizPolitics.html">Politics</a></h2></div></h2></div></div>
         </div>
       </div>
+      
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="../models/index.js"></script>
