--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </form>
-    <a href="highscores.html"> High Scores</a>
+    <a href="highscores.html" class = "link"> High Scores</a>
     <div class="homepage">
 
 
