--- a/views/quizTV.html
+++ b/views/quizTV.html
@@ -79,8 +79,8 @@
 
     <!-- script links -->
     <div>
-        <script src="../public/assets/js/tvQuestions.js"></script>
-        <script src="../public/assets/js/script.js"></script>
+        <script src="../assets/js/tvQuestions.js"></script>
+        <script src="../assets/js/script.js"></script>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
