--- a/views/scoreboard.html
+++ b/views/scoreboard.html
@@ -6,12 +6,12 @@
     <title>Scoreboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href = "/TrickyTrivia/public/assets/css/style.css">
+    <link rel = "stylesheet" href = "../assets/css/style.css">
 </head>
 <body>
     <div class= "navbar">
         <div class = "logo logotwo">
-            <img src="/TrickyTrivia/public/assets/images/logo.PNG" alt ="logo" height= "100">
+            <img src="../assets/images/logo.PNG" alt ="logo" height= "100">
         </div>
     </div>
 
@@ -36,6 +36,6 @@
 
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/TrickyTrivia/models/index.js"></script>
+<script src="../models/index.js"></script>
 
 </html>
