added play again buttons

--- a/views/quizATW.html
+++ b/views/quizATW.html
@@ -73,7 +73,11 @@
                 <div class="column"></div>
                     <p id="dAnswer"></p>
                 </div>
-            </div>           
+            </div>    
+            
+            <form action="topics.html">
+                <input type="submit" value="Play Again" />
+            </form>
         </div>
     </div>
 
